[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/clouds.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/icon.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/Font50.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.756902 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="Title" type="Label" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 1600.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.175781, 0.175781, 0.175781, 1 )
text = "Power Surge"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 500, 700 )
scale = Vector2( 12, 12 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1240.0
margin_top = 400.0
margin_right = 1680.0
margin_bottom = 713.0
custom_constants/separation = 15
__meta__ = {
"_edit_group_": true
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 5 )
text = "Start"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 440.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 5 )
text = "Join Game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 440.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 5 )
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 440.0
margin_bottom = 313.0
custom_fonts/font = ExtResource( 5 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
